@@ -6,4 +6,4 @@ BEGIN {
 	use_ok( 'Math::ODE' );
 }
 
-diag( "Testing Math::ODE " . $Math::ODE::VERSION . ", Perl $], $^X" );
+#diag( "Testing Math::ODE " . $Math::ODE::VERSION . ", Perl $], $^X" );
