@@ -14,9 +14,11 @@ my $o = new Math::ODE ( file => 'data',
 ok( ref $o eq 'Math::ODE', 'new returns proper object' );
 $o->evolve;
 my $eps = $o->{step} ** 4;	# because Math::ODE implements a 4th order Runge-Kutta method
-my $vals =  $o->values(0.5); 
 
-ok( abs( $vals->[0] - 2.5) < $eps, "Constant Coefficient Equation solved correctly, eps=$eps"); 
+my $s = sprintf("%0.12f", 0.5);
+my @vals =  $o->values_at( $s );
+my $res = abs($vals[0] - 2.5);
+ok( $res < $eps, "Constant Coefficient Equation solved correctly, res=$res"); 
 
 
 sub DE1 { my ($t,$y) = @_; return 5; }
