@@ -1,23 +1,51 @@
-use Test::More tests => 2;
+use Test::More tests => 3;
 use File::Spec;
 use lib File::Spec->catfile("..","lib");
 use Math::ODE;
 use Data::Dumper;
+my ($o, $eps, @vals, $res);
 
 # analytic solution is y(x) = 2 e^{-x}
-my $o = new Math::ODE ( file => 'data',
+$o = new Math::ODE ( file => 'data',
 			step => 0.1,
 			initial => [2], 
 			DE => [ \&DE1 ], 
 			t0 => 0,
 			tf => 5 );
 $o->evolve;
-print Dumper [ $o ];
-my $eps = $o->{step} ** 4;	# because Math::ODE implements a 4th order Runge-Kutta method
-my @vals =  @{ $o->{values}{3} }; 
-my $res = abs( $vals[0]  - 1 );
-ok( $res < $eps, "Constant Coefficient Equation solved correctly, res=$res"); 
+$eps = $o->error;	
+@vals =  $o->values_at(3);
+$res = abs( $vals[0]  - 2*exp(-3) );
+ok( $res < $eps, "Constant Coefficient 1st order solved correctly, res=$res, eps=$eps"); 
 
+
+# analytic solution is y(x) = -1/(z-1)
+$o = new Math::ODE ( file => 'data',
+			step => 0.01, 
+			initial => [1], 
+			DE => [ \&DE2 ], 
+			t0 => 0,
+			tf => 0.5 );
+$o->evolve;
+$eps = $o->error;	
+@vals =  $o->values_at(0.4);
+$res = abs( $vals[0]  + 1/(0.4-1) );
+ok( $res < $eps, "Nonlinear 1st order solved correctly, res=$res, eps=$eps"); 
+
+
+# analytic solution is y(x) = exp(-x^2)
+$o = new Math::ODE ( file => 'data',
+			step => 0.1, 
+			initial => [1], 
+			DE => [ \&DE3 ], 
+			t0 => 0,
+			tf => 5 );
+$o->evolve;
+$eps = $o->error;	
+@vals =  $o->values_at(3);
+$res = abs( $vals[0]  + 2*3*exp(-3**2) );
+ok( $res < $eps, " 1st order nonhomogeneous solved correctly, res=$res, eps=$eps"); 
 
 sub DE1 { my ($t,$y) = @_; return -$y->[0]; }
-
+sub DE2 { my ($t,$y) = @_; return $y->[0] ** 2; }
+sub DE3 { my ($t,$y) = @_; return - 2 * $y->[0] * exp ( - $y->[0] ** 2 ); }
